2015-09-14  Carlos O'Donell  <carlos@redhat.com>

	* Makefile ($(objpfx)check-local-headers.out): Redirect stdin from
	/dev/null.

2015-09-13  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/Makefile ($(patsubst %,$(hurd-objpfx)hurd/%.%,auth
	io fs process)): Drop spurious backslash.

2015-09-12  Rasmus Villemoes  <rv@rasmusvillemoes.dk>

	* sysdeps/unix/sysv/linux/getsysstats.c (__get_phys_pages):
	Use sysinfo system call instead of parsing /proc/meminfo.
	* sysdeps/unix/sysv/linux/getsysstats.c (__get_avphys_pages):
	Likewise.

2015-09-11  Mike Frysinger  <vapier@gentoo.org>

	[BZ #16985]
	* programs/localedef.c (main): Display argv[remaining] when
	output_path is NULL.

2015-09-11  Joseph Myers  <joseph@codesourcery.com>

	* math/auto-libm-test-in: Add more tests of acos, acosh, asin,
	asinh, atan, atan2, atanh, cabs, carg, cos, csqrt, erfc, exp,
	exp10, exp2, log, log1p, log2, pow, sin, sincos, sinh, tan and
	tanh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/mips/mips32/libm-test-ulps: Likewise.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-09-11  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/Makefile [$(subdir) = misc] (sysdep_headers):
	Use 'override' keyword to freeze the value here, preventing
	the addition of sys/mtio.h by sysdeps/gnu/Makefile.

2015-09-11  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14912]
	* sysdeps/aarch64/bits/atomic.h: Move to ...
	* sysdeps/aarch64/atomic-machine.h: ...here.
	(_AARCH64_BITS_ATOMIC_H): Rename macro to
	_AARCH64_ATOMIC_MACHINE_H.
	* sysdeps/alpha/bits/atomic.h: Move to ...
	* sysdeps/alpha/atomic-machine.h: ...here.
	* sysdeps/arm/bits/atomic.h: Move to ...
	* sysdeps/arm/atomic-machine.h: ...here.  Update comments.
	* bits/atomic.h: Move to ...
	* sysdeps/generic/atomic-machine.h: ...here.
	(_BITS_ATOMIC_H): Rename macro to _ATOMIC_MACHINE_H.